                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-08-2006 added: all strings are now localizable. there are about 150 new strings to translate. final call to all translators, have a blast! :)
 - 27-08-2006 fixed: [ 1530771 ] "Open tray" problem
 - 27-08-2006 changed: you can now have okay/cancel buttons in the lock dialog. skinners are free to update if they feel like it. id 28=okay, id 29=cancel.
 - 27-08-2006 changed: dialog.close builtin now takes an additional true parameter to force the closing (no anims etc).
 - 27-08-2006 fixed: Very short songs were often cut short when played with paplayer (meaning no sound at all).
 - 26-08-2006 added: Flicker Filter Xbe Patcher.  Based on hargle and VooD Win32 Flicker Filter XBE Patcher http://xbox.nugnugnug.com/FlickerFucker/
		     settings - my Programs - auto flicker filter patch on/off     
		     will always create a patched _ffp.xbe, the default will not touched
		     ff patcher uses the flicker filter setting in XBMC settings
                     will not patch: in progressive mode and homebrew xbe's
 - 25-08-2006 changed: skins are not reloaded unless needed when you log on / log off - allows for smoother transitions.
 - 25-08-2006 fixed: files (or folders) with 0 byte size would display as 0.1 Kb.
 - 25-08-2006 changed: treat a folder containing a VIDEO_TS.IFO file a complete dvd when stacking is enabled. you now don't need to enter folder and select video_ts.ifo to start it.
 - 25-08-2006 added: resume playback for dvd's and automatic bookmark for last played position
 - 25-08-2006 fixed: Folders on memory units weren't retrieved correctly.